--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node src/generate-search-data.ts",
-    "download": "ts-node src/download2.ts",
-    "test": "npm run test"
+    "test": "jest"
   },
   "keywords": [
     "steam"
@@ -14,14 +13,15 @@
   "author": "Yes",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
-    "node-html-parser": "^5.2.0",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
+    "jest": "^27.5.1",
     "typescript": "^4.5.5"
   }
 }
