--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
     "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
 }
