Add alternate implementation with cursor traversal
This obtains data purely using the Steam API, although it is missing some apps that are seemingly only available when sourcing data from the Steam Card Exchange

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/generate-search-data.ts",
   "scripts": {
     "start": "ts-node src/generate-search-data.ts",
+    "start-recursive": "ts-node src/generate-search-data-recursive.ts",
     "test": "jest"
   },
   "keywords": [
