Update app ID extraction logic to work with new Steam Card Exchange UI
This updated logic makes some new assumptions about the site and its layout, but seems to work for the time being. Also updating dependencies in `package-lock.json` to work with Node versions above 16. Fixes #2

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Makeshift search function for the Steam Points Shop",
   "main": "src/generate-search-data.ts",
   "scripts": {
-    "start": "ts-node src/generate-search-data.ts",
+    "empty-data": "echo var APPDATA = {}; > docs/data.js",
+    "start": "npm run empty-data && ts-node src/generate-search-data.ts",
     "start-recursive": "ts-node src/generate-search-data-recursive.ts",
     "test": "jest"
   },
